--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.1",
     "@types/react-dom": "^18.0.0",
     "axios": "^0.26.1",
+    "howler": "^2.2.3",
     "meyda": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/howler": "^2.2.7",
     "@types/recorder-js": "^1.0.2",
     "autoprefixer": "^10.4.4",
     "cross-env": "^7.0.3",
